test/skyline-k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skyline
  labels:
    name: skyline
    environment: dev
    project: kdt-project
